# pnfl-gameplanreader

./: ARCHITECTURE.md  CHANGELOG.md  README.md  STATUS.md  TEST_STATUS.md  TODO.md  pyproject.toml  pyrightconfig.json
config/: check-gameplan.dev.ini  check-gameplan.ini
release/: read-gameplan.bat
src/fbpro98_gameplanreader/: __init__.py  cli.py  gameplan_reader.py
src/pnfl_gameplanreader/: check_cli.py  cli.py  config.py  gameplan_reader.py  reader_cli.py
tests/: conftest.py  test_check_cli.py  test_cli.py  test_gameplan_reader.py  test_reader_cli.py
tests/data/: defense.pln  offense.pln
tests/data/expected/: defense_by_name_stdout.txt  defense_normal_by_name_txt.txt  defense_normal_by_slot_txt.txt  defense_special_txt.txt  defense_stdout.txt  defense_stdout_dash.txt  offense_by_name_stdout.txt  offense_normal_by_name_txt.txt  offense_normal_by_slot_txt.txt  offense_special_txt.txt  offense_stdout.txt  offense_stdout_dash.txt
