[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fbpro98-gameplanreader"
version = "1.0.0"
description = "Extract a list of plays from Front Page Sports Football Pro '98 gameplan (.pln) files."
authors = [{ name = "Brian J" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["fbpro98-gameplan"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
