[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fbpro98-gameplanreader"
version = "1.0.0"
description = "Extract a list of plays from Front Page Sports Football Pro '98 gameplan (.pln) files."
authors = [{ name = "Brian J" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["fbpro98-gameplan"]

[project.optional-dependencies]
dev = ["pytest", "pyright==1.1.409", "ruff", "ipython"]

[project.entry-points."pnfl.commands"]
read-gameplan = "fbpro98_gameplanreader.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src", "tests", "scripts"]
exclude = ["**/*.egg-info", "**/.*", "**/.venv", "**/__pycache__", "**/build", "**/dist", "**/node_modules", "**/output", "**/venv"]
extraPaths = ["src"]
typeCheckingMode = "standard"
reportUnusedImport = "warning"
pythonVersion = "3.10"
venvPath = ".."
venv = ".venv"
